# proyecto_videojuego

Documentos/bd-project/: pyproject.toml
Documentos/proyecto_videojuego (copia)/avioncitos/: highscores.json  pyproject.toml
Documentos/proyecto_videojuego (copia)/avioncitos/src/avioncitos/: audio.py  bullet.py  config.py  enemy.py  game.py  highscores.py  main.py  player.py  shapes.py  ui.py
Documentos/proyecto_videojuego/avioncitos/: highscores.json  pyproject.toml
Documentos/proyecto_videojuego/avioncitos/src/avioncitos/: __init__.py  audio.py  bullet.py  config.py  enemy.py  game.py  highscores.py  main.py  player.py  ui.py
