[project]
name = "bd-project"
version = "0.1.0"
description = "Proyecto gestion base de datos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "supabase>=2.22.3",
]
